[gd_scene load_steps=7 format=3 uid="uid://b3uirosy8e4i1"]

[ext_resource type="Script" uid="uid://d3lhck1slhebb" path="res://Script/Menu/tactical_phase.gd" id="1_qelru"]
[ext_resource type="Texture2D" uid="uid://bfsa2yubkgaly" path="res://Assets/windows_xp_background.jpg" id="2_1cadd"]
[ext_resource type="Texture2D" uid="uid://c480cg3alk2av" path="res://Assets/obspop.png" id="3_1cadd"]
[ext_resource type="PackedScene" uid="uid://cjs1xkph7r2p" path="res://Scenes/Obstacles/draggable_obstacle.tscn" id="3_o448h"]
[ext_resource type="Texture2D" uid="uid://t2jflurhm2qf" path="res://Assets/strt.png" id="5_5eh1f"]
[ext_resource type="Theme" uid="uid://bi54ign8ggomc" path="res://Assets/Classic95/Classic95.tres" id="5_u4661"]

[node name="TacticalPhase" type="Node2D"]
script = ExtResource("1_qelru")
metadata/_edit_vertical_guides_ = [-574.0, -464.0, 399.0]
metadata/_edit_horizontal_guides_ = [558.0, 846.0]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575, 322.99997)
scale = Vector2(0.29895833, 0.29907405)
texture = ExtResource("2_1cadd")

[node name="Level" type="Node2D" parent="."]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marbles" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="Marbles"]

[node name="2" type="Node2D" parent="Marbles"]

[node name="3" type="Node2D" parent="Marbles"]

[node name="4" type="Node2D" parent="Marbles"]

[node name="Obspop" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.87058824)
z_index = 2
position = Vector2(576, 525.75)
scale = Vector2(1.7909805, 1.7817465)
texture = ExtResource("3_1cadd")

[node name="DraggableObstacle1" parent="Obspop" instance=ExtResource("3_o448h")]
position = Vector2(-246.23384, 13.049011)
scale = Vector2(0.55835336, 0.56124705)

[node name="DraggableObstacle2" parent="Obspop" instance=ExtResource("3_o448h")]
position = Vector2(-109.437256, 13.049011)
scale = Vector2(0.55835336, 0.56124705)

[node name="DraggableObstacle3" parent="Obspop" instance=ExtResource("3_o448h")]
position = Vector2(107.76221, 13.049011)
scale = Vector2(0.55835336, 0.56124705)

[node name="DraggableObstacle4" parent="Obspop" instance=ExtResource("3_o448h")]
position = Vector2(246.23386, 13.61026)
scale = Vector2(0.55835336, 0.56124705)

[node name="Next" type="Button" parent="Obspop"]
offset_left = -39.084747
offset_top = 25.957733
offset_right = 37.409668
offset_bottom = 48.407562
disabled = true
flat = true

[node name="Launch" type="Button" parent="Obspop"]
visible = false
offset_left = -39.643097
offset_top = 18.661457
offset_right = 40.759796
offset_bottom = 49.661457
disabled = true
text = "
"
flat = true

[node name="uppopup" type="Node2D" parent="."]

[node name="WhoseTurn" type="Label" parent="uppopup"]
z_index = 2
offset_left = 806.78
offset_top = 10.1
offset_right = 1095.516
offset_bottom = 38.59
theme = ExtResource("5_u4661")
theme_override_colors/font_color = Color(0.92156863, 0.9137255, 0.84705883, 1)
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Vide" type="Sprite2D" parent="uppopup"]
z_index = 1
position = Vector2(967, 57)
scale = Vector2(1.179775, 1.0955056)
texture = ExtResource("5_5eh1f")

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Obspop/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Obspop/Launch" to="." method="_on_launch_pressed"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
